--- a/src/sass/main-section.scss
+++ b/src/sass/main-section.scss
@@ -132,7 +132,7 @@
   }
 
   .main-section__inner {
-    margin-top: 241px;
+    margin-top: 238px;
     height: 42.1%;
   }
 
